--- a/assets/package.json
+++ b/assets/package.json
@@ -7,8 +7,14 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.10.1",
+    "latlon-geohash": "2.0.0",
+    "leaflet": "^1.6.0",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -16,10 +22,10 @@
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
-    "sass-loader": "^8.0.2",
-    "node-sass": "^4.13.1",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "sass-loader": "^8.0.2",
     "terser-webpack-plugin": "^2.3.2",
     "webpack": "4.41.5",
     "webpack-cli": "^3.3.2"
